# cppkit

./: .travis.yml  CMakeLists.txt  Makefile  README.md  base_app.cmake  base_lib.cmake  base_ut.cmake  index.html  params.json  todo.txt
cmake/: base_app.cmake  base_lib.cmake  base_ut.cmake
include/cppkit/: ck_actor.h  ck_bitsy.h  ck_byte_ptr.h  ck_command_queue.h  ck_dynamic_library.h  ck_exception.h  ck_file_lock.h  ck_json.h  ck_md5.h  ck_memory.h  ck_memory_map.h  ck_path.h  ck_pool.h  ck_socket.h  ck_socket_address.h  ck_stream_io.h  ck_string.h  ck_types.h  ck_udp_receiver.h  ck_udp_sender.h  ck_variant.h
include/cppkit/algorithms/: ck_lower_bound.h
include/cppkit/os/: ck_error_msg.h  ck_exports.h  ck_files.h  ck_large_files.h  ck_sprintf.h  ck_time_utils.h
source/: ck_dynamic_library.cpp  ck_error_msg.cpp  ck_file_lock.cpp  ck_json.cpp  ck_large_files.cpp  ck_logger.cpp  ck_lower_bound.cpp  ck_md5.cpp  ck_memory.cpp  ck_memory_map.cpp  ck_path.cpp  ck_socket.cpp  ck_socket_address.cpp  ck_sprintf.cpp  ck_string.cpp  ck_time_utils.cpp  ck_udp_receiver.cpp  ck_udp_sender.cpp  ck_uuid_utils.cpp  ck_variant.cpp
tools/buildy/: CMakeLists.txt
tools/buildy/source/: git.cpp
ut/: CMakeLists.txt  Makefile
ut/include/: chrono_test.h  ck_actor_test.h  ck_byte_ptr_test.h  ck_command_queue_test.h  ck_file_lock_test.h  ck_large_files_test.h  ck_memory_test.h  ck_random_test.h  ck_socket_address_test.h  ck_socket_test.h  ck_string_test.h  ck_udp_sender_test.h  condition_variable_test.h  framework.h  recursive_mutex_test.h
ut/source/: chrono_test.cpp  ck_actor_test.cpp  ck_bitsy_test.cpp  ck_dynamic_library_test.cpp  ck_file_lock_test.cpp  ck_json_test.cpp  ck_large_files_test.cpp  ck_lower_bound_test.cpp  ck_path_test.cpp  ck_random_test.cpp  ck_socket_address_test.cpp  ck_socket_test.cpp  ck_string_test.cpp  ck_udp_receiver_test.cpp  ck_udp_sender_test.cpp  ck_variant_test.cpp  condition_variable_test.cpp  framework.cpp  recursive_mutex_test.cpp
